--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,20 @@
-#pink {
+.odd {
     background-color: rgb(255, 204, 203);
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+#two {
+    color: blue;
+    font-size: 36px;
+}
 
+#three {
+    font-size: 24px;
+}
+
+#four {
+    background-color: #90EE90;
+    font-size: 24px;
+    font-weight: bold;
 }
